--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
 \usepackage{subcaption}
 
 \usepackage{lineno}
-\linenumbers
+%\linenumbers
 
 \usepackage[perpage, symbol, flushmargin, hang]{footmisc}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
